# mupdf-cmake

./: CMakeLists.txt
cmake/modules/: FindJBIG2Dec.cmake  FindOpenJPEG2.cmake  FindV8.cmake
docs/: CMakeLists.txt
platform/x11/: CMakeLists.txt
scripts/: CMakeLists.txt
source/: CMakeLists.txt
source/tools/: CMakeLists.txt
