# -*- CMake -*-

####################################################################################################
#
# Executables rules
#

add_executable(bin2hex bin2hex.c)
add_executable(cmapdump cmapdump.c)
add_executable(cquote cquote.c)
add_executable(fontdump fontdump.c)

####################################################################################################
#
# End
#
####################################################################################################
